--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 
 <html>
 <head>
+	
+<!-- GrowingIO Analytics code version 2.1 -->
+<!-- Copyright 2015-2018 GrowingIO, Inc. More info available at http://www.growingio.com -->
+
+<script type='text/javascript'>
+!function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");
+  gio('init','8e562726ebf5198f', {});
+
+//custom page code begin here
+
+//custom page code end here
+
+gio('send');
+
+</script>
+
+<!-- End GrowingIO Analytics code version: 2.1 -->
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135454735-1"></script>
 <script>
