--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MM59P5R"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-	<h1 align="center">Building Now...</h1>
+	<h1 align="center">Building Now..</h1>
 </body>
 </html>
